画面のレイアウト作成

--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,4 +1,26 @@
-<div class="wrapper">
-  <%= render "side_bar" %>
-  <%= render "main_chat" %>
+<!DOCTYPE HTML>
+<div class="orgapp">
+  <div class="title">
+    <%# <%= image_tag "jonathan-cooper-Hb2mgY8DeeU-unsplash.jpg", class:"list-pict" %> 
+    <%# <%= image_tag "6f8ce0be342a5442c5f40ecaeb2873a7.png", class:"head-title" %> 
+    Let's Communicate
+  </div>
+
+  <div class="head-info">
+    <div class="date">
+      5月4日
+    </div>
+    <div class="contact">
+      業務連絡
+    </div>
+  </div>
+
+  <div class="wrapper">
+    <div class="side-bar">
+      <%= render "side_bar" %>
+    </div>
+    <div class="chat">
+      <%= render "main_chat" %>
+    </div>
+  </div>
 </div>
