--- a/app/views/comments/_side_bar.html.erb
+++ b/app/views/comments/_side_bar.html.erb
@@ -1,5 +1,18 @@
 <div class="side-bar-header">
+  <div class="create-room">
+    <a href="#">チャットルーム作成</a>
+  </div>
 </div>
 
 <div class="rooms">
+  <div class="room">
+    <div class="room-name">
+      <a href="#">techroom1</a>
+    </div>
+  </div>
+  <div class="room">
+    <div class="room-name">
+      <a href="#">techroom2</a>
+    </div>
+  </div>
 </div>
