--- a/app/views/comments/_main_chat.html.erb
+++ b/app/views/comments/_main_chat.html.erb
@@ -1,8 +1,53 @@
 <div class="chat-header">
+  <div class="left-header">
+    <div class="header-title">
+      team name
+    </div>
+  </div>
+  <div class="right-header">
+    <div class="header-button">
+      <a href="#">チャット終了</a>
+    </div>
+  </div>
 </div>
 
 <div class="messages">
+  <div class="message">
+    <div class="upper-message">
+      <div class="message-user">
+        name
+      </div>
+      <div class="message-date">
+        2021/5/6(Thu) 12:43:30
+      </div>
+    </div>
+    <div class="lower-message">
+      <div class="message-content">
+        おはよう
+      </div>
+    </div>
+  </div>
+
+  <div class="message">
+    <div class="upper-message">
+      <div class="message-user">
+        name
+      </div>
+      <div class="message-date">
+        2021/5/6(Thu) 12:47:30
+      </div>
+    </div>
+    <div class="lower-message">
+      <div class="message-content">
+        こんばんは
+      </div>
+    </div>
+  </div>
 </div>
 
 <div class="form">
+  <div class="form-input">
+    <input class="form-message" placeholder= "type a message">
+  </div>
+  <input class="form-submit" type="submit" value="送信">
 </div>
