フロント実装_修正

--- a/app/views/comments/_side_bar.html.erb
+++ b/app/views/comments/_side_bar.html.erb
@@ -1,9 +1,12 @@
+<%# ルームヘッダー %>
 <div class="side-bar-header">
   <div class="create-room">
     <a href="#">チャットルーム作成</a>
   </div>
 </div>
+<%# ルームヘッダー %>
 
+<%# チャットルーム名表示 %>
 <div class="rooms">
   <div class="room">
     <div class="room-name">
@@ -16,3 +19,25 @@
     </div>
   </div>
 </div>
+<%# チャットルーム名表示 %>
+
+<%# 出勤者リストヘッダー %>
+<div class="user-list-header">
+  <div class="user-list">
+    出勤者リスト
+  </div>
+</div>
+<%# 出勤者リストヘッダー %>
+
+<%# ユーザー名表示 %>
+<div class="users">
+  <ul class="user">
+    <li class="user-name">
+      <a href="#">user1</a>
+    </li>
+    <li class="user-name">
+      <a href="#">user2</a>
+    </li>
+  </ul>
+</div>
+<%# ユーザー名表示 %>
