--- a/app/assets/stylesheets/comments.css
+++ b/app/assets/stylesheets/comments.css
@@ -1,32 +1,86 @@
-.title{
-  height: 50px;
+.Upper-row{
+  background-image: url(cc7401db3e376fa34e8d9af966557c69.jpg);
 }
 
-.head-info {
+
+.head{
+  display: flex;
+  justify-content: space-between;
+  height: 50px;
+  padding: 20px 110px 0 0;
+}
+
+.left-head{
+  padding: 20px 0 0 50px;
+  color: white;
+}
+
+.login-button{
+  text-decoration: none;
+  border: 1px solid black;
+  color: black;
+  background-color: #f0c538f3;
+  padding: 15px;
+  margin-right: 20px;
+}
+
+.new-button{
+  text-decoration: none;
+  border: 1px solid black;
+  color: black;
+  background-color: #f0c538f3;
+  padding: 15px;
+  margin-right: 60px;
+}
+
+.date-contact {
   display: flex;
 }
+
 .date {
-  background-color: red;
   width: 300px;
   height: 100px;
+  font-size: 20px;
+  color: white;
+  padding: 30px;
 }
+
 .contact {
-  background-color: blue;
   width: calc(100vw - 300px);
   height: 100px;
+  padding: 10px;
 }
+
+.form-msg{
+  padding: 10px;
+  height: 80px;
+  width: calc(100vw - 450px);
+}
+
+.edit-button{
+  text-decoration: none;
+  border: 1px solid black;
+  color: black;
+  background-color: #f0c538f3;
+  padding: 20px;
+  margin-left: 30px;
+}
+
+
 
 
 .wrapper {
   display: flex;
 }
+
 .side-bar {
   background-color: #253141;
   width: 300px;
 }
+
 .side-bar-header {
   padding: 15px;
-  height: 100px;
+  height: 75px;
   background-color: #253141;
   display: flex;
   justify-content: space-between;
@@ -43,13 +97,13 @@
 
 .rooms {
   background-color: #2F3E51;
-  height: calc(100vh - 100px - 150px);
+  height: 200px;
   padding: 0 20px;
   overflow: scroll;
 }
 
 .room{
-  padding: 20px 0 40px;
+  padding: 20px 0 10px;
 }
 
 .room-name a {
@@ -57,39 +111,83 @@
   color: white;
 }
 
+.user-list-header{
+  padding: 15px;
+  height: 75px;
+  background-color: #253141;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; 
+}
+
+.user-list{
+  font-size: 10px;
+  border: 1px solid lightblue;
+  padding: 14px;
+  color: deepskyblue;
+  text-decoration: none;
+}
+
+.users {
+  background-color: #2F3E51;
+  height: calc(100vh - 500px);
+  padding: 0 20px;
+  overflow: scroll;
+}
+
+.user{
+  padding: 20px;
+}
+
+.user-name a{
+  padding-bottom: 10px;
+  text-decoration: none;
+  color: white;
+}
+
+
 
 
 .chat {
   background-color: #FFFFFF;
   width: calc(100vw - 300px);
 }
+
 .chat-header {
   height: 100px;
   padding: 0 40px;
   display: flex;
   justify-content: space-between;
 }
-.header-title{
+
+.team-title{
   color: #333;
   font-size: 24px;
   margin-top: 36px;
 }
 
 .right-header{
-  padding: 40px;
+  padding: 40px 10px 0 0;
 }
 
-.header-button a {
+.end-button a {
   text-decoration: none;
-  border: 1px solid darkred;
+  border: 2px solid darkred;
   color: darkred;
-  padding: 20px;
+  padding: 15px;
+}
+
+
+
+.chat-main{
+  display: flex;
 }
 
 .messages {
   background-color: #FAFAFA;
   height: calc(100vh - 100px - 90px - 150px);
   overflow: scroll;
+  width: calc(100vw - 500px);
 }
 
 .message{
@@ -100,9 +198,10 @@
   display: flex;
 }
 
-.message-user{
+.message-name{
   color: #434a54;
   font-size: 12px;
+  padding-left: 20px;
 }
 
 .message-date{
@@ -113,6 +212,7 @@
 
 .lower-message{
   margin-top: 10px;
+  padding-left: 20px;
 }
 
 .message-content{
@@ -121,8 +221,22 @@
   margin-bottom: 40px;
 }
 
+
+
+.memo{
+  background-color: #FAFAFA;
+}
+
+.memo-text{
+  margin-top: 20px;
+  height: calc(100vh - 380px);
+}
+
+
+
+
 .form {
-  background-color: #41994c;
+  background-color: #49260ab9;
   height: 90px;
   padding: 20px 40px;
   display: flex;
@@ -141,9 +255,9 @@
 }
 
 .form-submit{
-  background-color: #38AEF0;
+  background-color: #f0c538f3;
   border: none;
-  color: white;
+  color: black;
   font-size: 16px;
   height: 50px;
   margin-left: 15px;
