--- a/app/views/comments/_main_chat.html.erb
+++ b/app/views/comments/_main_chat.html.erb
@@ -1,53 +1,69 @@
+<%# チャットヘッダー %>
 <div class="chat-header">
   <div class="left-header">
-    <div class="header-title">
+    <div class="team-title">
       team name
     </div>
   </div>
   <div class="right-header">
-    <div class="header-button">
+    <div class="end-button">
       <a href="#">チャット終了</a>
     </div>
   </div>
 </div>
+<%# チャットヘッダー %>
 
-<div class="messages">
-  <div class="message">
-    <div class="upper-message">
-      <div class="message-user">
-        name
+<div class="chat-main">
+  <%# チャットメッセージ %>
+  <div class="messages">
+    <div class="message">
+      <div class="upper-message">
+        <div class="message-name">
+          name
+        </div>
+        <div class="message-date">
+          2021/5/6(Thu) 12:43:30
+        </div>
       </div>
-      <div class="message-date">
-        2021/5/6(Thu) 12:43:30
+      <div class="lower-message">
+        <div class="message-content">
+          おはよう
+        </div>
       </div>
     </div>
-    <div class="lower-message">
-      <div class="message-content">
-        おはよう
+  
+    <div class="message">
+      <div class="upper-message">
+        <div class="message-name">
+          name
+        </div>
+        <div class="message-date">
+          2021/5/6(Thu) 12:47:30
+        </div>
+      </div>
+      <div class="lower-message">
+        <div class="message-content">
+          こんばんは
+        </div>
       </div>
     </div>
   </div>
-
-  <div class="message">
-    <div class="upper-message">
-      <div class="message-user">
-        name
-      </div>
-      <div class="message-date">
-        2021/5/6(Thu) 12:47:30
-      </div>
-    </div>
-    <div class="lower-message">
-      <div class="message-content">
-        こんばんは
-      </div>
+  <%# チャットメッセージ %>
+  
+  <%# メモ %>
+  <div class="memo">
+    <div class="memo-form">
+      <input class="memo-text" placeholder= "memo">
     </div>
   </div>
+  <%# メモ %>
 </div>
 
+<%# 送信フォーム %>
 <div class="form">
   <div class="form-input">
     <input class="form-message" placeholder= "type a message">
   </div>
   <input class="form-submit" type="submit" value="送信">
 </div>
+<%# 送信フォーム %>
