--- a/app/assets/stylesheets/comments.css
+++ b/app/assets/stylesheets/comments.css
@@ -15,7 +15,25 @@
   color: white;
 }
 
-.login-button{
+.login-name{
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  padding: 15px;
+  margin-right: 20px;
+}
+
+.logout{
+  text-decoration: none;
+  border: 1px solid black;
+  color: black;
+  background-color: #f0c538f3;
+  padding: 10px;
+  margin-right: 30px;
+  font-size: 14px;
+}
+
+.login{
   text-decoration: none;
   border: 1px solid black;
   color: black;
@@ -24,7 +42,7 @@
   margin-right: 20px;
 }
 
-.new-button{
+.sign-up{
   text-decoration: none;
   border: 1px solid black;
   color: black;
