--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -8,8 +8,13 @@
         Let's Communicate
       </div>
       <div class="right-head">
-        <a href="#" class="login-button">ログイン</a>
-        <a href="#" class="new-button">新規登録</a>
+        <% if user_signed_in? %>
+          <%= link_to current_user.name, "#", class: "login-name" %>
+          <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %>
+        <% else %>
+          <%= link_to 'ログイン', new_user_session_path, class: "login" %>
+          <%= link_to '新規登録', new_user_registration_path, class: "sign-up" %>
+        <% end %>
       </div>
     </div>
     <%# トップ画面上段 %>
