--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -5,7 +5,7 @@
   <div class="Upper-row">
     <div class="head">
       <div class="left-head">
-        Let's Communicate
+        Let's have a conversation
       </div>
       <div class="right-head">
         <% if user_signed_in? %>
