--- a/app/views/comments/_side_bar.html.erb
+++ b/app/views/comments/_side_bar.html.erb
@@ -11,7 +11,7 @@
   <% current_user.rooms.each do |room| %>
     <div class="room">
       <div class="room-name">
-        <a href="#"><%= room.tname %></a>
+        <%= link_to room.tname, room_comments_path(room) %>
       </div>
     </div>
   <% end %>
