--- a/app/views/comments/_main_chat.html.erb
+++ b/app/views/comments/_main_chat.html.erb
@@ -2,7 +2,7 @@
 <div class="chat-header">
   <div class="left-header">
     <div class="team-title">
-      team name
+      <%= @room.tname %>
     </div>
   </div>
   <div class="right-header">
@@ -17,37 +17,6 @@
   <%# チャットメッセージ %>
   <div class="messages">
     <%= render partial: 'comment', collection: @comments %>
-    <%# <div class="message">
-      <div class="upper-message">
-        <div class="message-name">
-          name
-        </div>
-        <div class="message-date">
-          2021/5/6(Thu) 12:43:30
-        </div>
-      </div>
-      <div class="lower-message">
-        <div class="message-content">
-          こんにちは
-        </div>
-      </div>
-    </div>
-  
-    <div class="message">
-      <div class="upper-message">
-        <div class="message-name">
-          name
-        </div>
-        <div class="message-date">
-          2021/5/6(Thu) 12:47:30
-        </div>
-      </div>
-      <div class="lower-message">
-        <div class="message-content">
-          こんばんは
-        </div>
-      </div>
-    </div> %>
   </div>
   <%# チャットメッセージ %>
   
@@ -62,12 +31,9 @@
 
 <%# 送信フォーム %>
 <%= form_with model: [@room, @comment], class: 'form', local: true do |f| %>
-<%# <div class="form"> %>
   <div class="form-input">
     <%= f.text_field :content, class: 'form-message', placeholder: 'type a message' %>
-    <%# <input class="form-message" placeholder= "type a message"> %>
   </div>
   <%= f.submit '送信', class: 'form-submit' %>
-  <%# <input class="form-submit" type="submit" value="送信"> %>
 <% end %>
 <%# 送信フォーム %>
