--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -4,7 +4,7 @@
       <%= comment.user.name %>
     </div>
     <div class="message-date">
-      <%= comment.created_at %>
+      <%= l comment.created_at %>
     </div>
   </div>
   <div class="lower-message">
