--- a/app/views/comments/_main_chat.html.erb
+++ b/app/views/comments/_main_chat.html.erb
@@ -7,7 +7,8 @@
   </div>
   <div class="right-header">
     <div class="end-button">
-      <a href="#">チャット終了</a>
+      <%= link_to 'チャット終了', room_path(@room), method: :delete %>
+      <%# <a href="#">チャット終了</a> %>
     </div>
   </div>
 </div>
