--- a/app/assets/stylesheets/comments.css
+++ b/app/assets/stylesheets/comments.css
@@ -67,21 +67,26 @@
   width: calc(100vw - 300px);
   height: 100px;
   padding: 10px;
+  display: flex;
 }
 
 .form-msg{
+  background-color: white;
   padding: 10px;
   height: 80px;
   width: calc(100vw - 450px);
+  white-space: pre-wrap;
+  overflow: scroll;
 }
 
 .edit-button{
+  height: 70px;
   text-decoration: none;
   border: 1px solid black;
   color: black;
   background-color: #f0c538f3;
   padding: 20px;
-  margin-left: 30px;
+  margin: 5px 0 0 30px;
 }
 
 
@@ -167,32 +172,37 @@
 
 
 .chat {
-  background-color: #FFFFFF;
+  /* background-color: #49260ab9; */
   width: calc(100vw - 300px);
 }
 
 .chat-header {
-  height: 100px;
+  height: 75px;
   padding: 0 40px;
   display: flex;
   justify-content: space-between;
+  background-color: #6e4b2cb9;
 }
 
 .team-title{
-  color: #333;
+  color: black;
   font-size: 24px;
-  margin-top: 36px;
+  margin-top: 21px;
 }
 
 .right-header{
-  padding: 40px 10px 0 0;
+  padding: 25px 0 0 0;
 }
 
-.end-button a {
+.end-button a{
   text-decoration: none;
-  border: 2px solid darkred;
-  color: darkred;
-  padding: 15px;
+  /* border: 2px solid rgba(173, 102, 8, 0.658);
+  color: rgba(173, 102, 8, 0.658); */
+  border: 2px solid rgb(100, 25, 25);
+  color: rgb(100, 25, 25);
+  margin: 5px;
+  padding: 10px;
+  background-color: white;
 }
 
 
@@ -202,8 +212,8 @@
 }
 
 .messages {
-  background-color: #FAFAFA;
-  height: calc(100vh - 100px - 90px - 150px);
+  /* background-color: #FAFAFA; */
+  height: calc(100vh - 75px - 90px - 150px);
   overflow: scroll;
   width: calc(100vw - 500px);
 }
@@ -241,9 +251,9 @@
 
 
 
-.memo{
-  background-color: #FAFAFA;
-}
+/* .memo{
+  background-color: red;
+} */
 
 .memo-text{
   margin-top: 20px;
@@ -254,7 +264,7 @@
 
 
 .form {
-  background-color: #49260ab9;
+  background-color: #6e4b2cb9;
   height: 90px;
   padding: 20px 40px;
   display: flex;
