--- a/app/assets/stylesheets/room.css
+++ b/app/assets/stylesheets/room.css
@@ -126,3 +126,13 @@ select {
 .field_with_errors{
   display: contents;
 }
+
+.room-return{
+  display: inline-block;
+  padding: 12px 40px;
+  color: #fff;
+  background-color: #38aef0;
+  border: 0;
+  margin: 30px 0 0 20px;
+  text-decoration: none;
+}
