--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -16,9 +16,9 @@
         <label class='chat-room-form__label' for='chat_room_チャットメンバー'>チャットメンバー</label>
       </div>
       <div class='chat-room-form__field--right'>
-        <select name="room[user_ids][]">
-          <option value="">チャットするユーザーを選択してください</option>
-          <% User.where.not(id: current_user.id).each do |user| %>
+        <select name="room[user_ids][]" multiple="multiple">
+          <%# <option value="">チャットするユーザーを選択してください</option> %>
+          <% User.where.not(id: current_user.id).each do |user| %> 
             <option value=<%= user.id %>><%= user.name %></option>
           <% end %>
         </select>
@@ -29,6 +29,7 @@
       <div class='chat-room-form__field--left'></div>
       <div class='chat-room-form__field--right'>
         <%= f.submit class: 'chat-room-form__action-btn'%>
+        <%= link_to '戻る', root_path, class: 'room-return' %>
       </div>
     </div>
   <% end %>
